--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>27 - Code structuring</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <canvas class="webgl"></canvas>
@@ -16,6 +17,10 @@
   <div id="gamecontainer">
   </div>
   <button class="expand-collapse-btn">Settings</button>
+  <button id="toggleMapsButton" class="fas fa-map-marked-alt"></button> <!-- Example using the Hamburger Icon -->
+  <div id="uiMaps">
+    <button id="closeMapSelection">&#10006;</button>
+  </div>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
